# rookie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
app/: .gitignore  Cargo.toml
app/board/: Cargo.toml
app/board/src/: lib.rs  resolve.rs
app/cli/: Cargo.toml
app/cli/src/: camera.rs  camera_route.rs  main.rs
app/web/: package-lock.json  tsconfig.json
app/web/src/: index.html
app/web/src/app/components/camera/: camera_card.tsx  camera_properties.tsx  camera_property.tsx
app/web/src/app/components/nav/: main_drawer.tsx
board/: board.cpp  board.hpp  cell.hpp
board/frame/: frame.cpp  frame.hpp  frame_resolver.hpp
board/frame/resolvers/: grid_resolver.cpp  line_resolver.cpp  line_resolver.hpp  point_resolver.hpp
data/img/: _annotations.csv  _classes.csv
math/: constants.hpp  line.cpp  line.hpp  line_segment.hpp  quad.hpp  segment.cpp  segment.hpp  triangle.hpp  vector.cpp  vector.hpp
src/: go.mod  go.sum  main.cpp
src/board/: board.cpp  board.hpp  cell.cpp  cell.hpp  resolve.go  resolve_edges.go  resolve_quads.go  resolve_triangles.go
src/board/frame/: frame.hpp  frame_resolver.cpp
src/board/frame/resolvers/: grid_resolver.cpp  grid_resolver.hpp  line_resolver.hpp  point_resolver.cpp  quad_resolver.cpp  quad_resolver.hpp  triangle_resolver.cpp  triangle_resolver.hpp
src/camera/: camera.go  camera_routes.go  camera_service.go  camera_settings.go  property.go
src/main/: camera.go  camera_config.go  main.go  route_camera.go
src/math/: line.hpp  point.hpp  position.hpp  quad.hpp
src/utils/: format.cpp  format.hpp
src/web/: package-lock.json  package.json
src/web/src/: index.html  index.ts
src/web/src/app/: app.tsx  camera.tsx
src/web/src/app/components/camera/: camera.tsx  camera_card.tsx  camera_device_id.tsx
src/web/src/app/components/nav/: main_bar.tsx  main_drawer.tsx
src/web/src/app/pages/: home.tsx  settings.tsx
tool/: create_images.py  create_transforms.py  rookie_image_generation.py
tool/util/: csv_dataset_builder.py
